Review Request 8990: PLS-3499 Published by whom should display in history, backend/frontend changes